--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "amqplib": "^0.10.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cuid": "^3.0.0",
+    "jose": "^5.9.6",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "^19.0.0",
